--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Taillwind Template</title>
 </head>
 <body>
-    <div class="bg-purple-500 text-white p-4">Hello World!</div>
+    <div class="bg-yellow-700 text-white p-4">Hello World!</div>
 </body>
 </html>
