--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
     <link rel="stylesheet" href="./style.css" />
-    <link rel="shortcut icon" href="favicon icon verlikung" type="image/x-icon">
+    <link rel="favicon icon" href="./assets/favicon.ico" type="image/x-icon">
     <title>Rocket IO</title>
 </head>
 
