--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-    <header>
-        <div>
-            <h1>
+    <header class="bg-purple-900 text-white">
+        <div class="flex justify-between items-center max-w-6xl mx-auto">
+            <div>
                 <a href="#">🚀 Rocket.io</a>
-            </h1>
+            </div>
 
 
             <nav>
