--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="bg-purple-900 text-white sticky top-0">
+    <header class="bg-violet-700 text-white sticky top-0 z-10 mb-12">
         <div class="flex justify-between items-center max-w-6xl mx-auto p-4">
             <div class="text-3xl font-medium">
                 <a href="#">🚀 Rocket.io</a>
@@ -22,39 +22,39 @@
             <nav>
                 <div class="text-xl sm:hidden">burger</div>
                 <ul aria-label="main" class="sm:flex gap-4 text-xl hidden">
-                    <li><a class="hover:text-yellow-500" href="#">Home</a></li>
-                    <li><a class="hover:text-yellow-500" href="#rockets">Our Apps</a></li>
-                    <li><a class="hover:text-yellow-500" href="#testimonials">Testimonials</a></li>
-                    <li><a class="hover:text-yellow-500" href="#contact">Contact Us</a></li>
+                    <li><a class="hover:text-yellow-500 transition ease-in-out duration-300" href="#">Home</a></li>
+                    <li><a class="hover:text-yellow-500 transition ease-in-out duration-300" href="#rockets">Our Apps</a></li>
+                    <li><a class="hover:text-yellow-500 transition ease-in-out duration-300" href="#testimonials">Testimonials</a></li>
+                    <li><a class="hover:text-yellow-500 transition ease-in-out duration-300" href="#contact">Contact Us</a></li>
                 </ul>
             </nav>
 
 
         </div>
     </header>
-    <main>
+    <main class="max-w-6xl mx-auto">
         <!-- ***************** -->
         <!-- Hero Section -->
         <!-- ***************** -->
-        <section id="hero">
-            <article>
-                <h2>
+        <section id="hero" class="flex flex-col-reverse sm:flex-row gap-8 p-6 justify-center items-center mb-12">
+            <article class="sm:w-1/2">
+                <h2 class="text-4xl font-bold text-center max-w-md sm:text-5xl sm:text-left text-slate-900 mb-10">
                     We build
-                    <span>Amazing AI-Powered
+                    <span class="text-violet-700">Amazing AI-Powered
                     </span>
                     apps...
                 </h2>
-                <p>
+                <p class="max-w-md text-2xl text-center text-slate-700 mb-8 sm:text-left">
                     At Rocket.IO we build next generation apps today. From AI to
                     Blockchain, we've got you covered...
                 </p>
-                <div>
-                    <a href="#contact">
+                <div class="flex justify-center sm:justify-start">
+                    <a class="bg-violet-700 p-3 text-white w-48 text-2xl text-center rounded-lg border border-solid border-slate-900 hover:bg-violet-300 hover:text-slate-900 hover:scale-105 transition ease-in-out duration-300" href="#contact">
                         Contact Us
                     </a>
                 </div>
             </article>
-            <img src="./assets/rocketman.png" alt="rocket dap image" />
+            <img src="./assets/rocketdab.png" alt="rocket dap image" class="w-1/2 hover:animate-bounce" />
         </section>
 
         <hr />
@@ -181,6 +181,7 @@
             </form>
         </section>
     </main>
+
     <footer id="footer">
         <div>
             <address>
