--- a/index.html
+++ b/index.html
@@ -67,42 +67,44 @@
 
 
 
-        <section id="rockets">
-            <h2>
+        <section id="rockets" class="p-6 my-12">
+            <h2 class="text-4xl text-center">
                 Our Apps
             </h2>
-            <div>
-                <article>
-                    <img src="./assets/rocketride.png" alt="rocket ride image" />
+            <div class="my-12 mx-auto flex flex-col sm:flex-row items-center gap-8">
+                <article class="w-2/3 flex flex-col items-center border border-solid border-slate-900 py-2 rounded-xl shadow-xl hover:shadow-violet-400 cursor-pointer transition-all duration-300 sm:w-5/6" >
+                    
+                    <img src="./assets/rocketride.png" alt="rocket ride image" class="w-1/2 mb-6" />
 
-                    <h3>
+                    <h3 class="text-3xl text-center text-slate-900 mb-2">
                         Innovative
                     </h3>
 
-                    <p>
+                    <p class="text-2xl text-center text-slate-500">
                         Next Gen
                     </p>
                 </article>
-                <article>
-                    <img src="./assets/rocketman.png" alt="rocket man image" />
 
-                    <h3>
+                <article class="w-2/3 flex flex-col items-center border border-solid border-slate-900 py-2 rounded-xl shadow-xl hover:shadow-violet-400 cursor-pointer transition-all duration-300 sm:w-5/6">
+                    <img src="./assets/rocketman.png" alt="rocket man image" class="w-1/2 mb-6"/>
+
+                    <h3 class="text-3xl text-center text-slate-900 mb-2">
                         AI Powered
                     </h3>
 
-                    <p>
+                    <p class="text-2xl text-center text-slate-500">
                         Best Seller!
                     </p>
                 </article>
 
-                <article>
-                    <img src="./assets/rocketlaunch.png" alt="rocket launch image" />
+                <article class="w-2/3 flex flex-col items-center border border-solid border-slate-900 py-2 rounded-xl shadow-xl hover:shadow-violet-400 cursor-pointer transition-all duration-300 sm:w-5/6">
+                    <img src="./assets/rocketlaunch.png" alt="rocket launch image" class="w-1/2 mb-6" />
 
-                    <h3>
+                    <h3 class="text-3xl text-center text-slate-900 mb-2">
                         High Performance
                     </h3>
 
-                    <p>
+                    <p class="text-2xl text-center text-slate-500">
                         Top Rated!
                     </p>
                 </article>
