--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
         <section id="rockets" class="p-6 my-12">
-            <h2 class="text-4xl text-center">
+            <h2 class="text-4xl text-center font-bold">
                 Our Apps
             </h2>
             <div class="my-12 mx-auto flex flex-col sm:flex-row items-center gap-8">
@@ -80,7 +80,7 @@
                         Innovative
                     </h3>
 
-                    <p class="text-2xl text-center text-slate-500">
+                    <p class="text-2xl text-center text-slate-500 mb-2">
                         Next Gen
                     </p>
                 </article>
